Version 1.1.23 (released ??-???-????)

  * fix annotate bug triggered by files with trailing blank lines (issue #533)
  * fix markup display of files with trailing blank lines (issue #533)

Version 1.1.22 (released 14-Jan-2014)

  * minor directory sorting logic fix (re: show_subdir_lastmod)
  * fix display of show_subdir_lastmod details (issue #532)
  * pay attention to chardet's detection confidence
  * linkify line numbers in markup/annotate view

Version 1.1.21 (released 13-Sep-2013)

  * fix markup/annotate exception with Python < 2.7 (issue #527)

Version 1.1.20 (released 24-Apr-2013)

  * fix tab-to-space handling regression in markup view
  * fix regression in root lookup handling (issue #526)

Version 1.1.19 (released 22-Apr-2013)

  * improve root lookup performance (issue #523)
  * new 'max_filesize_kbytes' config option and handling (issue #524)
  * tarball generation improvements:
    - preserve Subversion symlinks in generated tarballs (issue #487)
    - reduce memory usage of tarball generation logic
    - fix double compression of generated tarballs (issue #525)
  * file content handling improvements:
    - expanded support for encoding detection and transcoding (issue #11)
    - fix tab-to-space conversion bugs in markup, annotate, and diff views
    - fix handling of trailing whitespace in diff view
  * add support for timestamp display in ISO8601 format (issue #46)

Version 1.1.18 (released 28-Feb-2013)

  * fix exception raised by BDB-backed SVN repositories (issue #519)
  * hide revision-less files when rcsparse is in use
  * include branchpoints in branch views using rcsparse (issue #347)
  * miscellaneous cvsdb improvements:
    - add --port option to make-database (issue #521)
    - explicitly name columns in queries (issue #522)
    - update MySQL syntax to avoid discontinued "TYPE=" terms

Version 1.1.17 (released 25-Oct-2012)

  * fix exception caused by uninitialized variable usage (issue #516)

Version 1.1.16 (released 24-Oct-2012)
