@@ -2,6 +2,7 @@ Version 1.1.23 (released ??-???-????)
 
   * fix annotate bug triggered by files with trailing blank lines (issue #533)
   * fix markup display of files with trailing blank lines (issue #533)
+  * add support for root-relative svnauthz access files (issue #535)
 
 Version 1.1.22 (released 14-Jan-2014)
 
